// TASK-169: Unit tests for propagator module
#[cfg(test)]
mod propagator_tests {
    use super::super::propagator::*;

    const ISS_TLE_LINE1: &str = "1 25544U 98067A   24001.50000000  .00016717  00000-0  10270-3 0  9025";
    const ISS_TLE_LINE2: &str = "2 25544  51.6400 208.9163 0006703 130.5360 325.0288 15.50377579999999";

    #[test]
    fn test_propagate_valid_tle() {
        let timestamp = 1704067200; // 2024-01-01 00:00:00 UTC
        
        let result = propagate(ISS_TLE_LINE1, ISS_TLE_LINE2, timestamp);
        
        assert!(result.is_ok(), "Propagation should succeed with valid TLE");
        
        let prop = result.unwrap();
        
        // ISS should be in LEO (350-450 km)
        assert!(prop.geodetic.altitude_km > 300.0, "ISS altitude should be > 300 km");
        assert!(prop.geodetic.altitude_km < 500.0, "ISS altitude should be < 500 km");
        
        // Latitude should be within ISS inclination (~51.6 deg)
        assert!(prop.geodetic.latitude_deg.abs() <= 52.0, 
            "Latitude should be within inclination");
        
        // Position magnitude should be close to orbital radius
        let pos_magnitude = (prop.position_km[0].powi(2) 
            + prop.position_km[1].powi(2) 
            + prop.position_km[2].powi(2)).sqrt();
        assert!(pos_magnitude > 6700.0 && pos_magnitude < 6900.0, 
            "Position magnitude should be ~6800 km");
        
        // Velocity should be orbital velocity (~7.5 km/s)
        let vel_magnitude = (prop.velocity_km_s[0].powi(2) 
            + prop.velocity_km_s[1].powi(2) 
            + prop.velocity_km_s[2].powi(2)).sqrt();
        assert!(vel_magnitude > 7.0 && vel_magnitude < 8.0, 
            "Velocity should be ~7.5 km/s");
    }

    #[test]
    fn test_propagate_invalid_tle() {
        let timestamp = 1704067200;
        
        let result = propagate("INVALID TLE", "INVALID TLE", timestamp);
        
        assert!(result.is_err(), "Propagation should fail with invalid TLE");
    }

    #[test]
    fn test_propagate_trajectory() {
        let start = 1704067200;
        let end = start + 3600; // 1 hour
        let step = 60; // 1 minute
        
        let result = propagate_trajectory(ISS_TLE_LINE1, ISS_TLE_LINE2, start, end, step);
        
        assert!(result.is_ok(), "Trajectory propagation should succeed");
        
        let points = result.unwrap();
        
        // Should have 61 points (0 to 60 minutes inclusive)
        assert_eq!(points.len(), 61, "Should have 61 trajectory points");
        
        // Timestamps should be in order
        for i in 1..points.len() {
            assert!(points[i].0 > points[i-1].0, "Timestamps should be increasing");
            assert_eq!(points[i].0 - points[i-1].0, step, "Step should be consistent");
        }
        
        // All points should have valid data
        for (_, prop) in &points {
            assert!(prop.geodetic.altitude_km > 0.0, "Altitude should be positive");
            assert!(prop.geodetic.latitude_deg.abs() <= 90.0, "Latitude should be valid");
            assert!(prop.geodetic.longitude_deg.abs() <= 180.0, "Longitude should be valid");
        }
    }

    #[test]
    fn test_propagate_trajectory_custom_step() {
        let start = 1704067200;
        let end = start + 600; // 10 minutes
        let step = 120; // 2 minutes
        
        let result = propagate_trajectory(ISS_TLE_LINE1, ISS_TLE_LINE2, start, end, step);
        
        assert!(result.is_ok());
        let points = result.unwrap();
        
        // 0, 120, 240, 360, 480, 600 = 6 points
        assert_eq!(points.len(), 6, "Should have 6 points with 2-minute steps");
    }

    #[test]
    fn test_visibility_calculation() {
        let start = 1704067200;
        let end = start + 86400; // 24 hours
        
        // New York City ground station
        let gs_lat = 40.7128;
        let gs_lon = -74.0060;
        let gs_alt_km = 0.01; // 10 meters
        let min_elevation = 5.0; // 5 degrees
        
        let result = calculate_visibility(
            ISS_TLE_LINE1,
            ISS_TLE_LINE2,
            &gs_lat,
            &gs_lon,
            gs_alt_km,
            min_elevation,
            start,
            end,
        );
        
        assert!(result.is_ok(), "Visibility calculation should succeed");
        
        let passes = result.unwrap();
        
        // ISS should have multiple passes over 24 hours
        assert!(passes.len() > 0, "Should have at least one pass");
        
        // Verify pass structure
        for pass in &passes {
            assert!(pass.los_timestamp > pass.aos_timestamp, "LOS should be after AOS");
            assert!(pass.max_elevation_deg >= min_elevation, 
                "Max elevation should be >= minimum");
            assert!(pass.max_elevation_deg <= 90.0, "Max elevation should be <= 90");
            
            // Pass duration should be reasonable (typically 5-15 minutes for LEO)
            let duration = pass.los_timestamp - pass.aos_timestamp;
            assert!(duration > 0 && duration < 1800, 
                "Pass duration should be reasonable (< 30 min)");
        }
    }

    #[test]
    fn test_geodetic_conversion() {
        // Test with known ISS position
        let timestamp = 1704067200;
        let result = propagate(ISS_TLE_LINE1, ISS_TLE_LINE2, timestamp);
        
        assert!(result.is_ok());
        let prop = result.unwrap();
        
        // Geodetic coordinates should be valid
        assert!(prop.geodetic.latitude_deg >= -90.0 && prop.geodetic.latitude_deg <= 90.0);
        assert!(prop.geodetic.longitude_deg >= -180.0 && prop.geodetic.longitude_deg <= 180.0);
        assert!(prop.geodetic.altitude_km > 0.0);
    }

    #[test]
    fn test_propagation_error_types() {
        // Test TLE parse error
        let result = propagate("", "", 1704067200);
        assert!(result.is_err());
        match result.unwrap_err() {
            PropagationError::TleParseError(_) => {},
            _ => panic!("Expected TleParseError"),
        }
    }

    #[test]
    fn test_elevation_calculation() {
        // Test that elevation calculation produces reasonable results
        let start = 1704067200;
        let end = start + 7200; // 2 hours
        
        let result = calculate_visibility(
            ISS_TLE_LINE1,
            ISS_TLE_LINE2,
            &0.0,  // Equator
            &0.0,  // Prime meridian
            0.0,   // Sea level
            0.0,   // Any elevation
            start,
            end,
        );
        
        assert!(result.is_ok());
    }
}

// TASK-170: Integration tests for HTTP endpoints
#[cfg(test)]
mod http_integration_tests {
    use super::super::*;

    #[tokio::test]
    async fn test_propagate_endpoint() {
        // This would require setting up a test server
        // For now, we test the request/response types
        let req = PropagateRequest {
            satellite_id: "ISS".to_string(),
            tle_line1: "1 25544U 98067A   24001.50000000  .00016717  00000-0  10270-3 0  9025".to_string(),
            tle_line2: "2 25544  51.6400 208.9163 0006703 130.5360 325.0288 15.50377579999999".to_string(),
            timestamp_unix: 1704067200,
        };
        
        assert_eq!(req.satellite_id, "ISS");
        assert_eq!(req.tle_line1.len(), 69);
        assert_eq!(req.tle_line2.len(), 69);
    }

    #[tokio::test]
    async fn test_batch_request_structure() {
        let batch = BatchPropagateRequest {
            requests: vec![
                PropagateRequest {
                    satellite_id: "SAT1".to_string(),
                    tle_line1: "1 25544U 98067A   24001.50000000  .00016717  00000-0  10270-3 0  9025".to_string(),
                    tle_line2: "2 25544  51.6400 208.9163 0006703 130.5360 325.0288 15.50377579999999".to_string(),
                    timestamp_unix: 1704067200,
                },
                PropagateRequest {
                    satellite_id: "SAT2".to_string(),
                    tle_line1: "1 25544U 98067A   24001.50000000  .00016717  00000-0  10270-3 0  9025".to_string(),
                    tle_line2: "2 25544  51.6400 208.9163 0006703 130.5360 325.0288 15.50377579999999".to_string(),
                    timestamp_unix: 1704067300,
                },
            ],
        };
        
        assert_eq!(batch.requests.len(), 2);
    }

    #[tokio::test]
    async fn test_trajectory_request_structure() {
        let req = TrajectoryRequest {
            satellite_id: "ISS".to_string(),
            tle_line1: "1 25544U 98067A   24001.50000000  .00016717  00000-0  10270-3 0  9025".to_string(),
            tle_line2: "2 25544  51.6400 208.9163 0006703 130.5360 325.0288 15.50377579999999".to_string(),
            start_unix: 1704067200,
            end_unix: 1704070800,
            step_seconds: 60,
        };
        
        assert!(req.end_unix > req.start_unix);
        assert!(req.step_seconds > 0);
    }

    #[tokio::test]
    async fn test_visibility_request_structure() {
        let req = VisibilityRequest {
            satellite_id: "ISS".to_string(),
            tle_line1: "1 25544U 98067A   24001.50000000  .00016717  00000-0  10270-3 0  9025".to_string(),
            tle_line2: "2 25544  51.6400 208.9163 0006703 130.5360 325.0288 15.50377579999999".to_string(),
            ground_station: GroundStation {
                id: "GS1".to_string(),
                name: "Test Station".to_string(),
                latitude_deg: 40.7128,
                longitude_deg: -74.0060,
                altitude_m: 10.0,
                min_elevation_deg: 5.0,
            },
            start_unix: 1704067200,
            end_unix: 1704153600,
        };
        
        assert!(req.ground_station.latitude_deg.abs() <= 90.0);
        assert!(req.ground_station.longitude_deg.abs() <= 180.0);
    }
}

// TASK-171: Integration tests for gRPC endpoints
#[cfg(test)]
mod grpc_integration_tests {
    // gRPC integration tests would require setting up a test server
    // These are placeholders for the structure
    
    #[tokio::test]
    async fn test_grpc_propagate_position() {
        // Would test gRPC PropagatePosition method
        // Requires gRPC client setup
    }

    #[tokio::test]
    async fn test_grpc_propagate_trajectory() {
        // Would test gRPC PropagateTrajectory method
    }

    #[tokio::test]
    async fn test_grpc_calculate_visibility() {
        // Would test gRPC CalculateVisibility method
    }
}
